Fix PR tree-optimization/98272

This fixes the precision mismatch introduced by the previous change.

gcc/ChangeLog:
	PR tree-optimization/98272
	* tree-switch-conversion.c (bit_test_cluster::emit): When finding
	out whether the entry test can be merged in the bit test, do the
	computation using the type of the index expression.

gcc/testsuite/ChangeLog:
	* gcc.dg/pr98272.c: New test.